<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <item
        android:id="@+id/item1"
        android:actionLayout="@layout/activity_main"
        android:visible="true"
        android:title="@string/paste"
        />
    <item
        android:id="@+id/item2"
        android:actionLayout="@layout/activity_main"
        android:visible="true"
        android:title="@string/settings_string"
        />

    <item
        android:id="@+id/item3"
        android:actionLayout="@layout/activity_main"
        android:visible="true"
        android:title="@string/new_folder_string"
        />

    <item
        android:id="@+id/item4"
        android:actionLayout="@layout/activity_main"
        android:visible="true"
        android:title="@string/new_file"
        />
</menu>