<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/backgroundgradiant"
    >

    <androidx.appcompat.widget.Toolbar xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:navigationIcon="@drawable/ic_arrow_back_black_24dp"
        app:titleTextColor="@android:color/white"
        android:background="@android:color/transparent"
        />

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            >

            <Button
                android:id="@+id/external"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:elevation="100dp"
                android:layout_marginStart="26dp"
                android:layout_marginTop="90dp"
                android:background="@android:color/white"
                android:drawableTop="@drawable/ic_insert_drive_file_black_24dp"
                android:paddingTop="20dp"
                android:paddingBottom="10dp"
                android:gravity="bottom"
                android:text="@string/open_external_storage"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="@color/colorAccent"

                android:textSize="15sp"/>

            <Button
                android:id="@+id/downloads"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="90dp"
                android:layout_marginEnd="26dp"
                android:background="@android:color/white"
                android:gravity="bottom"
                android:drawableTop="@drawable/ic_android_black_24dp"
                android:paddingTop="20dp"
                android:paddingBottom="10dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/open_download_folder"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent"
                android:textSize="15sp"/>

            <Button
                android:id="@+id/images"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_below="@+id/downloads"
                android:layout_marginStart="26dp"
                android:layout_marginTop="20dp"
                android:background="@android:color/white"
                android:gravity="bottom"
                android:drawableTop="@drawable/ic_photo_library_black_24dp"
                android:paddingTop="20dp"
                android:paddingBottom="10dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/open_images_storage"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent"
                android:textSize="15sp"
                />
            <Button
                android:id="@+id/settings"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_below="@+id/images"
                android:layout_marginStart="26dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:layout_marginTop="20dp"
                android:background="@android:color/white"
                android:gravity="bottom"
                android:drawableTop="@drawable/ic_settings_black_24dp"
                android:paddingTop="20dp"
                android:paddingBottom="10dp"
                android:visibility="gone"
                android:text="Settings"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent"
                android:textSize="15sp"
                />

            <Button
                android:id="@+id/data"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_below="@+id/external"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="20dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:layout_marginEnd="26dp"
                android:background="@android:color/white"
                android:gravity="bottom"
                android:drawableTop="@drawable/ic_music_note_black_24dp"
                android:paddingTop="20dp"
                android:paddingBottom="10dp"
                android:text="@string/open_music_storage"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent"
                android:textSize="15sp"/>


            <Button
                android:id="@+id/internal"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_below="@+id/data"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="26dp"
                android:background="@android:color/white"
                android:gravity="bottom"
                android:drawableTop="@drawable/ic_insert_drive_file_black_24dp"
                android:paddingTop="20dp"
                android:paddingBottom="10dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/open_internal_storage"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent"
                android:textSize="15sp"/>
        </RelativeLayout>

    </ScrollView>

</RelativeLayout>